tests/errors/inst/register2 2.s
.name "Zork"
.comment "Hello, i'm Zork"          

ld %0, r17
